* 2012-12-17 - marcus.klein@open-xchange.com

 - Fix for bug 24222: Renamed package to open-xchange-appsuite.